fixed project alignment and most of the links work

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Lato", sans-serif;
+    font-family: 'Roboto', sans-serif;;
 }
 
 h1 {
@@ -11,6 +11,8 @@ h2 {
   display: flex;
   justify-content: center;
 }
+
+
 
 
 .nav {
@@ -32,7 +34,7 @@ h2 {
 }
 
 .nav a:hover {
-  color: #f1f1f1;
+  color: black;
 }
 
 @media screen and (max-height: 450px) {
@@ -42,7 +44,7 @@ h2 {
 
 
 .aboutMe {
-    background-image: url(https://i.imgur.com/AfT5tFj.jpg);
+    background-image: url(https://i.imgur.com/YbTL7xU.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     border: 2px solid #1111;
@@ -63,20 +65,49 @@ img.aboutMePicture {
 .wordContainer {
     color: white;
     width: 50%;
-    background-color: rgba(128, 128, 128, 0.5);
+    
 }
 
-.projects {
+.statement {
+  margin-top: 400px;
+  text-align: center;
+}
+
+/*#projects {
+  display: flex;
+  flex-direction: row;
+}*/
+
+#petAdoption {
+  display: flex;
+  flex-direction: column;
+}
+
+.projectTitle {
   display: flex;
   justify-content: center;
 }
 
+.projectImage {
+  display: flex;
+  justify-content: center;
+}
+
+.projectStatement {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
 
 .work1 {
-  width: 40%;
-  height: 40%;
-  background-color: black;
-  margin: 80px;
+  display: flex;
+  justify-content: center;
+  width: 40vw;
+  
 }
 
 footer {
@@ -85,9 +116,13 @@ footer {
     text-align: center;
 }
 
+.socialLink {
+  width: 4vw;
+}
 
 
-@media only screen and (max-width: 980px) {
+
+/*@media only screen and (max-width: 980px) {
 .content{width:90%;}
 }
 
@@ -108,9 +143,7 @@ nav{top:47px;}
 }
 
 @media only screen and (max-width: 320px) {
-h1 {padding: 20px 0px;}
-
-
+h1 {padding: 20px 0px;}*/
 
 
 
